Updates to file SCSS structure and compilation
- Rearranged SCSS structure to allow for future theming

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,10 +1,10 @@
 <div class="grid-container full">
   <div class="grid-x">
-    <div class="large-3 cell">
+    <div class="header--panel large-3 cell">
       <p><strong>Header</strong></p>
       <code>.header-global</code>
     </div>
-    <div class="content-panel large-9 cell">
+    <div class="content--panel large-9 cell">
       <div class="callout">
         <h3>We&rsquo;re stoked you want to try Foundation! </h3>
         <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
