Updated header panel and typography

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,13 +1,18 @@
 <div class="grid-container full">
   <div class="grid-x">
-    <div class="header--panel large-3 cell">
-      <p><strong>Header</strong></p>
-      <code>.header-global</code>
-    </div>
+    <header class="header--panel large-3 cell">
+      <div class="header--panel--header">
+        <h1 class="header--panel--title">Helen Liu.<span>UX + Interaction Designer.</span></h1>
+      </div>
+      <div class="header--panel--content">
+        <p class="lead">Customer-driven designer, front-end developer, advocate for accessibility and universal design, Agile.</p>
+      </div>
+      <code>.header--panel</code>
+    </header>
     <div class="content--panel large-9 cell">
       <div class="callout">
         <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-        <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
+        <p>To get going, this file <strong>(index.html)</strong> includes some basic styles you can modify, play around with, or <em>totally destroy</em> to get going.</p>
         <p>Once you've exhausted the fun in this document, you should check out:</p>
         <div class="grid-x grid-margin-x">
           <div class="large-4 medium-4 cell">
