Updates to .header--panel, typography and body background colour

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,14 +1,21 @@
+---
+layout: home
+title: helenliu.me
+---
 <div class="grid-container full">
   <div class="grid-x">
-    <header class="header--panel large-3 cell">
-      <div class="header--panel--header">
-        <h1 class="header--panel--title">Helen Liu.<span>UX + Interaction Designer.</span></h1>
+    <section class="header--panel large-3 cell">
+      <div class="header--panel--container align-self-middle">
+        <header class="heaer--panel--header">
+          <h1 class="header--panel--title">Helen Liu.</h1>
+        </header>
+        <div class="header--panel--content">
+          <p>Customer-driven designer, front-end developer, advocate for accessibility and universal design, Agile.</p>
+          <p><a href="#">More about Helen</a></p>
+        </div>
+        <code>.header--panel</code>
       </div>
-      <div class="header--panel--content">
-        <p class="lead">Customer-driven designer, front-end developer, advocate for accessibility and universal design, Agile.</p>
-      </div>
-      <code>.header--panel</code>
-    </header>
+    </section>
     <div class="content--panel large-9 cell">
       <div class="callout">
         <h3>We&rsquo;re stoked you want to try Foundation! </h3>
