New images and styles

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,155 +3,180 @@ layout: home
 title: helenliu.me
 ---
 <div class="grid-container full">
-  <div class="grid-x">
-    <section class="header--panel large-3 cell">
-      <div class="header--panel--container align-self-middle">
-        <header class="heaer--panel--header">
-          <h1 class="header--panel--title">Helen Liu.</h1>
-        </header>
-        <div class="header--panel--content">
-          <p>Customer-driven designer, front-end developer, advocate for accessibility and universal design, Agile.</p>
-          <p><a href="#">More about Helen</a></p>
+  <div id="header" class="feature">
+    <div class="grid-x">
+      <div class="feature-panel feature-panel--background cell" id="foo1">
+        <div class="feature-panel--background-image image-3">
+          <img src="/assets/img/bg-img-bubbles-blurred-large.svg" alt="" />
         </div>
-        <code>.header--panel</code>
-      </div>
-    </section>
-    <div class="content--panel large-9 cell">
-      <div class="callout">
-        <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-        <p>To get going, this file <strong>(index.html)</strong> includes some basic styles you can modify, play around with, or <em>totally destroy</em> to get going.</p>
-        <p>Once you've exhausted the fun in this document, you should check out:</p>
-        <div class="grid-x grid-margin-x">
-          <div class="large-4 medium-4 cell">
-            <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-          </div>
-          <div class="large-4 medium-4 cell">
-            <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
-          </div>
-          <div class="large-4 medium-4 cell">
-            <p><a href="http://foundation.zurb.com/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowledge.</p>
-          </div>
+        <div class="feature-panel--image">
+          <img src="/assets/img/img-avatar-glow.svg" alt="Illustration of Helen Liu" />
         </div>
-        <div class="grid-x grid-margin-x">
-          <div class="large-4 medium-4 medium-push-2 cell">
-            <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-          </div>
-          <div class="large-4 medium-4 medium-pull-2 cell">
-            <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-          </div>        
+        <div class="feature-panel--background-image image-2">
+          <img src="/assets/img/bg-img-bubbles-sharp-large.svg" alt="" />
+        </div>
+        <div class="feature-panel--background-image image-1">
+          <img src="/assets/img/bg-img-insects-large.svg" alt="" />
         </div>
       </div>
-
-      <h5>Here&rsquo;s your basic grid:</h5>
-      <!-- Grid Example -->
-
-      <div class="grid-x grid-margin-x">
-        <div class="large-12 cell">
-          <div class="primary callout">
-            <p><strong>This is a twelve column section in a grid-x with grid-margin-x.</strong> Each of these includes a div.callout element so you can see where the cell are - it's not required at all for the grid.</p>
+    </div>
+    <div class="grid-x">
+      <div id="foo" class="header--panel cell">
+        <div class="grid-x">
+          <header class="header--panel--header cell">
+            <h1 class="header--panel--title">&lt;h1&gt;<span>&lt;span&gt;</span>&lt;/h1&gt;</h1>
+          </header>
+          <div class="header--panel--content large-8 large-offset-2 cell">
+            <p>&lt;p&gt;</p>
           </div>
         </div>
       </div>
-      <div class="grid-x grid-margin-x">
-        <div class="large-6 medium-6 cell">
-          <div class="primary callout">
-            <p>Six cell</p>
+    </div>
+  </div>
+  <div class="grid-x row">
+    <div class="featurettes-panel cell">
+      <div class="grid-container">
+        <div class="grid-x">
+          <div class="featurettes-panel--item medium-4 cell">
+            <div class="featurettes-panel--image">
+              <img src="/assets/img/img-bugs.svg" alt="" />
+            </div>
+            <header>
+              <h2 class="featurettes-panel--title">&lt;h2&gt;</h2>
+            </header>
+            <div class="featurettes-panel--content">
+              <p>&lt;p&gt;</p>
+            </div>
           </div>
-        </div>
-        <div class="large-6 medium-6 cell">
-          <div class="primary callout">
-            <p>Six cell</p>
+          <div class="featurettes-panel--item medium-4 cell">
+            <div class="featurettes-panel--image">
+              <img src="/assets/img/img-mac.svg" alt="" />
+            </div>
+            <header>
+              <h2 class="featurettes-panel--title">&lt;h2&gt;</h2>
+            </header>
+            <div class="featurettes-panel--content">
+              <p>&lt;p&gt;</p>
+            </div>
+          </div>
+          <div class="featurettes-panel--item medium-4 cell">
+            <div class="featurettes-panel--image">
+              <img src="/assets/img/img-paintbrushes.svg" alt="" />
+            </div>
+            <header>
+              <h2 class="featurettes-panel--title">&lt;h2&gt;</h2>
+            </header>
+            <div class="featurettes-panel--content">
+              <p>&lt;p&gt;</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="grid-x grid-margin-x">
-        <div class="large-4 medium-4 small-4 cell">
-          <div class="primary callout">
-            <p>Four cell</p>
+    </div>
+  </div>
+  <div class="grid-x row">
+    <section class="blade-panel padded large-padding-bottom cell">
+      <div class="grid-container">
+        <div class="grid-x">
+          <div class="medium-6 small-order-2 medium-order-1 cell">
+            <header class="blade-panel--header">
+              <div class="tag--bubble-2">
+                <!-- <i class="fas fa-star"></i> -->
+                <h1 class="tag--label">&lt;h1&gt;</h1>
+              </div>
+              <h2 class="blade-panel--title">&lt;h2&gt;<span>&lt;span&gt;</span></h2>
+            </header>
+            <div class="blade-panel--content">
+              <p>&lt;p&gt;</p>
+            </div>
+          </div>
+          <div class="blade-panel--image medium-6 small-order-1 medium-order-2 cell">
+            <img src="/assets/img/img-telstra-screens.svg" alt="" class="show-for-large" />
+            <img src="/assets/img/img-telstra-screens-medium.svg" alt="" class="show-for-medium-only" />
+            <img src="/assets/img/img-telstra-screens-small.svg" alt="" class="show-for-small-only" />
           </div>
         </div>
-        <div class="large-4 medium-4 small-4 cell">
-          <div class="primary callout">
-            <p>Four cell</p>
-          </div>
-        </div>
-        <div class="large-4 medium-4 small-4 cell">
-          <div class="primary callout">
-            <p>Four cell</p>
-          </div>
-        </div>
-      </div>
-      
-      <hr />
-              
-      <h5>We bet you&rsquo;ll need a form somewhere:</h5>
-      <form>
-        <div class="grid-x grid-margin-x">
-          <div class="large-12 cell">
-            <label>Input Label</label>
-            <input type="text" placeholder="large-12.cell" />
-          </div>
-        </div>
-        <div class="grid-x grid-margin-x">
-          <div class="large-4 medium-4 cell">
-            <label>Input Label</label>
-            <input type="text" placeholder="large-4.cell" />
-          </div>
-          <div class="large-4 medium-4 cell">
-            <label>Input Label</label>
-            <input type="text" placeholder="large-4.cell" />
-          </div>
-          <div class="large-4 medium-4 cell">
-            <div class="grid-x grid-margin-x collapse">
-              <label>Input Label</label>
-              <div class="input-group">
-                <input class="input-group-field" type="text" placeholder="input-group" />
-                <span class="input-group-label">.com</span>
+        <div class="grid-x">
+          <div class="blade-panel--action cell">
+            <div class="grid-container">
+              <div class="grid-x">
+                <div class="cell">
+                  <p><a class="button button-1" href="#">&lt;p&gt;&lt;a&gt;&lt;/p&gt;<i class="far fa-chevron-right icon-small medium-margin-left"></i></a></p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="grid-x grid-margin-x">
-          <div class="large-12 cell">
-            <label>Select Box</label>
-            <select>
-              <option value="husker">Husker</option>
-              <option value="starbuck">Starbuck</option>
-              <option value="hotdog">Hot Dog</option>
-              <option value="apollo">Apollo</option>
-            </select>
-          </div>
-        </div>
-        <div class="grid-x grid-margin-x">
-          <div class="large-6 medium-6 cell">
-            <label>Choose Your Favorite</label>
-            <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-            <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-          </div>
-          <div class="large-6 medium-6 cell">
-            <label>Check these out</label>
-            <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-            <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-          </div>
-        </div>
-        <div class="grid-x grid-margin-x">
-          <div class="large-12 cell">
-            <label>Textarea Label</label>
-            <textarea placeholder="small-12.cell"></textarea>
-          </div>
-        </div>
-      </form>
-
-      <h5>Try one of these buttons:</h5>
-      <p><a href="#" class="small button">Simple Button</a><br/>          
-      <a href="#" class="medium success button">Success Btn</a><br/>
-      <a href="#" class="medium alert button">Alert Btn</a><br/>
-      <a href="#" class="medium secondary button">Secondary Btn</a></p>           
-      <div class="callout">
-        <h5>So many components, girl!</h5>
-        <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-        <a href="http://foundation.zurb.com/docs/" class="small button">Go to Foundation Docs</a>          
       </div>
-    </div>
+    </section>
+  </div>
+  <div class="grid-x row">
+    <section class="blade-panel padded large-padding-top cell">
+      <div class="grid-container-full">
+        <div class="grid-x">
+          <div class="cell">
+            <header class="blade-panel--header text-center">
+              <h1>6 reasons to hire me</h1>
+            </header>
+          </div>
+        </div>
+        <div class="grid-x">
+          <div class="block medium-6 large-4 cell">
+            <header class="block--header">
+              <span class="tag-1">Experience</span>
+              <h2 class="block--title">I've been doing this for 15 years</h2>
+            </header>
+            <div class="block--content">
+              <p>I've worked in enterprise, Government, higher ed, agency. I've experienced what works, what doesn't. I've seen what's evolved, and I'm across what's upcoming - I'm quick to identify problems and come up with design strategies.</p>
+            </div>
+          </div>
+          <div class="block medium-6 large-4 cell">
+            <header class="block--header">
+              <span class="tag-1">Unicorn</span>
+              <h2 class="block--title">Rare breed of designer</h2>
+            </header>
+            <div class="block--content">
+              <p>Block</p>
+            </div>
+          </div>
+          <div class="block medium-6 large-4 cell">
+            <header class="block--header">
+              <span class="tag-1">Empathy for all users</span>
+              <h2 class="block--title">Universal design</h2>
+            </header>
+            <div class="block--content">
+              <p>Block</p>
+            </div>
+          </div>
+          <div class="block medium-6 large-4 cell">
+            <header class="block--header">
+              <span class="tag-1">Design strategy</span>
+              <h2 class="block--title">Strong foundations first</h2>
+            </header>
+            <div class="block--content">
+              <p>Block</p>
+            </div>
+          </div>
+          <div class="block medium-6 large-4 cell">
+            <header class="block--header">
+              <span class="tag-1">Empathy for all users</span>
+              <h2 class="block--title">Universal design</h2>
+            </header>
+            <div class="block--content">
+              <p>Block</p>
+            </div>
+          </div>
+          <div class="block medium-6 large-4 cell">
+            <header class="block--header">
+              <span class="tag-1">Design strategy</span>
+              <h2 class="block--title">Strong foundations first</h2>
+            </header>
+            <div class="block--content">
+              <p>Block</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 </div>
